src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>C501_Affordable_Care_Act_Subsidy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Affordable Care Act Subsidy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Alimony_Other_Spousal_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Alimony / Other Spousal Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Annual_Income__c</fullName>
        <inlineHelpText>Annual Income for the household - used to calculate Income Level</inlineHelpText>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C501_Child_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Child Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Childcare_Voucher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Childcare Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Current_Address_Move_In_Year__c</fullName>
        <label>Current Address Move In Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_EITC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>EITC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Earned_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Earned Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Federal_Poverty_Level__c</fullName>
        <formula>C501_Annual_Income__c / (12140 + ((C501_Household_Size__c - 1) * 4320))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Poverty Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C501_HUD_VASH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>HUD-VASH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Household_Income_Level__c</fullName>
        <description>Module4</description>
        <label>Household Income Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Up to 50%</fullName>
                </value>
                <value>
                    <fullName>51% to 75%</fullName>
                </value>
                <value>
                    <fullName>76% to 100%</fullName>
                </value>
                <value>
                    <fullName>101% to 125%</fullName>
                </value>
                <value>
                    <fullName>126% to 150%</fullName>
                </value>
                <value>
                    <fullName>151% to 175%</fullName>
                </value>
                <value>
                    <fullName>176% to 200%</fullName>
                </value>
                <value>
                    <fullName>201% to 250%</fullName>
                </value>
                <value>
                    <fullName>Over 250%</fullName>
                </value>
                <value>
                    <fullName>Unknown/ Not Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Household_Income_Sources__c</fullName>
        <description>Module4</description>
        <label>Household Income Sources</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Income from Employment Only</fullName>
                </value>
                <value>
                    <fullName>Income from Employment and Other Income Source</fullName>
                </value>
                <value>
                    <fullName>Income from Employment, Other Income Source, and Non-Cash Benefits</fullName>
                </value>
                <value>
                    <fullName>Income from Employment and Non-Cash Benefits</fullName>
                </value>
                <value>
                    <fullName>Other Income Source Only</fullName>
                </value>
                <value>
                    <fullName>Other Income Source and Non-Cash Benefits</fullName>
                </value>
                <value>
                    <fullName>No Income</fullName>
                </value>
                <value>
                    <fullName>Non-Cash Benefits Only</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Household_Size__c</fullName>
        <description>Module4</description>
        <inlineHelpText>Number of people in the household - including those who are not listed as Contacts. Used to calculate HH Income Level and in Module4 reporting.</inlineHelpText>
        <label>Household Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Household_Type__c</fullName>
        <description>Module4</description>
        <label>Household Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Person</fullName>
                </value>
                <value>
                    <fullName>Two Adults No Children</fullName>
                </value>
                <value>
                    <fullName>Single Parent Female</fullName>
                </value>
                <value>
                    <fullName>Single Parent Male</fullName>
                </value>
                <value>
                    <fullName>Two Parent Household</fullName>
                </value>
                <value>
                    <fullName>Non-related Adults with Children</fullName>
                </value>
                <value>
                    <fullName>Multigenerational Household</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Housing_Choice_Voucher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Housing Choice Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Housing__c</fullName>
        <description>Module4</description>
        <label>Housing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Other permanent housing</fullName>
                </value>
                <value>
                    <fullName>Homeless</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Income_Unknown_Not_Reported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Income Unknown / Not Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Level field for use with Level feature. May be deleted or edited as needed.</description>
        <label>Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Household Levels</relationshipLabel>
        <relationshipName>Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C501_NonCash_Income_Unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>NonCash Income Unknown / Not Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Other_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Other Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Other_Non_Cash_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Other Non-Cash Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Pension__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Pension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Permanent_Supportive_Housing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Permanent Supportive Housing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Previous_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Household Previous Levels</relationshipLabel>
        <relationshipName>PreviousLevels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C501_Private_Disability_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Private Disability Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Public_Housing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Public Housing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Retirement_Income_Social_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Retirement Income - Social Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_SNAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>SNAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Self_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Service_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Service Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>C501_Social_Security_Disability_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Social Security Disability Income (SSDI)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Supplemental_Security_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Supplemental Security Income (SSI)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_TANF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>TANF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Unemployment_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Unemployment Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_VA_Non_Service_Disability_Pension__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>VA Non-Service Disability Pension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_VA_Service_Connected_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>VA Service-Connected Disability Comp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_WIC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>WIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Worker_s_Compensation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Worker’s Compensation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Years_at_Current_Address__c</fullName>
        <label>Years at Current Address</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>